<resources>
    <string name="app_name">JagdrevierApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_revier_karte">Map</string>
    <string name="google_maps_key">AIzaSyA-JsKSnsobosH8nlqyR3G130M_BKekdzM</string>

    <string name="Revier_TextView">Revierverwaltung</string>
    <string name="Jaeger">Jäger verwalten</string>
    <string name="Add_Jaeger_Button">Jäger in das Revier aufnehmen</string>
    <string name="Delete_Jaeger_Button">Jäger aus dem Revier entfernen</string>
    <string name="RevierMap_TextView">Hier geht´s zum aktuellen Revier</string>
    <string name="GoTo_RevierMap_Button">Aktuelle Revierkarte anzeigen</string>
    <string name="Jaeger_Vorname">Vorname:</string>
    <string name="Jaeger_Nachname">Nachname:</string>
    <string name="Jaeger_Schein">Jagdscheinr.:</string>

    <string name="LogInBtn">Aufbaumen!</string>
    <string name="WelcomeMsg">Waidmannsheil!</string>
    <string name="titleJagdeinrichtungen">Jagdeinrichtungen</string>
    <string name="logOutBtnText">Abbaumen</string>
    <string name="registBtn">Registrieren</string>

    <string name="pflichtfelder">Bitte alle Felder ausfüllen!</string>
    <string name="menuBtn">Menü</string>
    <string name="mapBtn">Map</string>
    <string name="loginMailHint">jaeger@wald.de</string>
    <string name="passwordHint">Passwort</string>
    <string name="toSignInText">Bereits registriert? - Klicke hier!</string>
    <string name="toRegisterText">Noch nicht registriert? - Klicke hier</string>
    <string name="schussBtn">Schuss\njournal</string>
    <string name="revierBtn">Revierverwaltung</string>
    <string name="jagdein_Btn">Jagdeinrichtunge</string>
    <string name="titleSchussjournal">Schussjournal</string>

    <!-- Revier verwalten -->
    <string name="add_Jagdeinrichtung">Neue Kanzel</string>
    <string name="del_Jagdeinrichtung">Kanzel entfernen</string>
    <string name="kanzel_Name">Name der Kanzel</string>
    <string name="refresh_Btn">Refresh</string>
    <string name="nameReq">Bitte benenne die jagdliche Einrichtung.</string>
    <string name="data_Get_Fail">Kanzeln konnten nicht abgerufen werden.</string>
    <string name="data_Get_Success">Aktuelles Revier geladen.</string>
    <string name="data_Del_Fail">Kanzel existiert nicht.</string>
    <string name="data_Del_Success">Jagdeinrichtung erfolgreich aus Revier entfernt.</string>
    <string name="jagdeinrichtung_exists">Jagdeinrichtung existiert bereits!</string>
    <string name="jagdeinrichtung_saved">Jagdeinrichtung hinzugefügt!</string>
    <string name="refresh_Fail">Aktualisieren fehlgeschlagen.</string>
    <string name="refresh_Success">Revier aktualisiert.</string>

    <!-- Schussjournal -->
    <string name="bang_Jrnl_Head">Schussjournal</string>
    <string name="bang_Add_Line">Neuer Eintrag</string>
    <string name="delete">DELETE</string>
    <string name="new_line">Neuer Eintrag</string>

    <!-- JournalPop -->
    <string name="shots">Anzahl Schüsse:</string>
    <string name="hits">Treffer:</string>
    <string name="caliber">Kaliber:</string>
    <string name="target">Ziel:</string>
    <string name="means">Zweck:</string>
    <string name="hint_Shots">z.B. 1</string>
    <string name="hint_Hits">Na, getroffen?</string>
    <string name="hint_Caliber">Wasn Ballermann!</string>
    <string name="hint_Target">z.B. Bambi </string>
    <string name="hint_Means">Nur ein Warnschuss?</string>
    <string name="save_Line_Text">Eintrag speichern</string>
    <string name="return_Journal_Btn">Return to Journal.</string>
    <string name="line_Add_Success">Journaleintrag angelegt!</string>
    <string name="line_Add_Fail">Journaleintrag konnte nicht angelegt werden!</string>
    <string name="book_Description">Eingaben für Journaleintrag</string>
    <string name="wood_Board">Planke für Überschrift</string>
    <string name="fields_Req">Bitte alle Felder ausfüllen.</string>
    <string name="hits_Over_Shots">Mehr Treffer als Schüsse? Komm schon…</string>

    <!-- JournalAdapter -->
    <string name="shot_line">Schüsse:</string>
    <string name="hit_line">Treffer:</string>
    <string name="caliber_line">Kaliber:</string>
    <string name="target_line">Ziel:</string>
    <string name="mean_line">Zweck:</string>
    <string name="lat_line">lat:</string>
    <string name="lng_line">lng:</string>

    <!-- RevierKarte -->
    <string name="pest">" ist frei, aber hat Insektenbefall!"</string>
    <string name="dmg">" ist frei, aber beschädigt!"</string>
    <string name="pest_dmg"> ist frei, aber beschädigt und befallen!</string>
    <string name="bkd_or"> ist besetzt sowie beschädigt oder befallen!</string>
    <string name="bkd_pest_dmg"> ist besetzt, beschädigt und befallen!</string>
    <string name="bkd"> ist besetzt!</string>
    <string name="free"> ist frei!</string>
    <string name="add_revier">Revier hinzufügen</string>
    <string name="legend">Legende</string>
    <string name="free_txt">frei</string>
    <string name="bkd_txt">besetzt</string>
    <string name="pest_txt">Befall</string>
    <string name="dmg_txt">Schaden</string>
    <string name="pest_dmn_txt">Schaden+Befall</string>
    <string name="hs_dmn_txt">besetzt+Schaden/Befall</string>
    <string name="hs_alert_txt">besetzt+Schaden+Befall</string>
    <string name="add_revier_txt">+Revier</string>

    <!-- Reviersketch -->
    <string name="draw">draw</string>
    <string name="undo">undo</string>
    <string name="save">save</string>
    <string name="revier_sketch_hint">"Revierreferenz, z.B 1, Revier1, Hasenhöhle …"</string>
    <string name="back_to_map">Zurück zur Revierkarte</string>
    <string name="rev_save_text">Revier speichern</string>
    <string name="draw_text">Abstecken</string>
    <string name="clear_text">Neu starten</string>
    <string name="rev_name_req">Zum Speichern bitte Revierreferenz angeben!</string>
    <string name="poly_empty">Bitte noch das Revier abstecken.</string>

    <!-- AddJagdEinrPop -->
    <string name="WaidmannGrussModern">Waihei, </string>


    <!-- Permissions -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the
        \'my location\' feature, which shows your current location on the map.
    </string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\'
        layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied,
        it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.
    </string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="allHochsitze">Alle Hochsitze</string>
    <string name="statusHochsitzName">Hochsitz</string>
    <string name="statusHochsitzGebucht">Hochsitz ist gebucht:</string>
    <string name="switchPächter">Pächter</string>
    <string name="nickName">Nickname</string>
    <string name="btnStat">Status</string>
    <string name="btnBook">book</string>
    <string name="btnDamn">damn</string>
    <string name="btnInsect">Inst</string>
    <string name="txtHochsitzname">Hier könnte ihre Werbung stehen</string>

    <string name="title_activity_revier_sketch">Map</string>
    <string name="btnToSchussjrnl">Journal</string>
    <string name="btnStatToJaEinr">zurück zu Revier</string>
    <string name="RegisterMsg">Registrierung</string>
    <string name="btnToJagdEinr">Home</string>
    <string name="todo">TODO</string>
    <string name="addJagdEinr">Add Jagdeinrichtung</string>
    <string name="radio_sitz">Hochsitz</string>
    <string name="radio_cam">Kamera</string>
    <string name="radio_trap">Falle</string>
    <string name="radio_kirrung">Kirrung</string>
    <string name="JagdEinrBezeichnung">Jagdeinrichtung</string>
    <string name="todo2">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo11">TODO</string>
    <string name="toMapBtnImg">toMapBtnImg</string>
    <string name="logoutBtnImg">logoutBtnImg</string>
    <string name="randomUser">User</string>

</resources>
