<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnStatusHochsitz"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="11dp"
        android:text="@string/btnStat" />

    <TextView
        android:id="@+id/textHochsitzName"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@+id/btnStatusHochsitz"
        android:text="@string/txtHochsitzname"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/textHochsitzName"
        android:text="@string/btnBook" />

    <Button
        android:id="@+id/btnDamage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/btnBook"
        android:text="@string/btnDamn" />

    <Button
        android:id="@+id/btnInsect"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/btnDamage"
        android:text="@string/btnInsect" />

</RelativeLayout>