<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".JournalPop">

    <TextView
            android:text="@string/bang_Jrnl_Head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bang_Jrnl_Head"
            android:textAlignment="center"
            android:textAllCaps="true" android:textSize="14sp"
            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" android:layout_marginEnd="50dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/user_Name_Jrnl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp" app:layout_constraintEnd_toStartOf="@+id/bang_Jrnl_Head"
            android:layout_marginEnd="10dp"/>
    <TextView
            android:text="@string/shots"
            android:labelFor="@id/input_Shots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/shots"
            app:layout_constraintEnd_toStartOf="@+id/input_Shots" android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/user_Name_Jrnl" android:layout_marginTop="45dp"/>
    <TextView
            android:text="@string/hits"
            android:labelFor="@id/input_Hits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/hits"
            app:layout_constraintEnd_toStartOf="@+id/input_Hits" android:layout_marginEnd="10dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/shots"/>
    <TextView
            android:text="@string/caliber"
            android:labelFor="@id/input_Caliber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/caliber"
            app:layout_constraintEnd_toStartOf="@+id/input_Caliber" android:layout_marginEnd="10dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/hits"/>
    <TextView
            android:text="@string/target"
            android:labelFor="@id/input_Target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/target"
            app:layout_constraintEnd_toStartOf="@+id/input_Target" android:layout_marginEnd="10dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/caliber"/>
    <TextView
            android:text="@string/means"
            android:labelFor="@id/input_Means"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/menas"
            app:layout_constraintEnd_toStartOf="@+id/input_Means" android:layout_marginEnd="10dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/target"/>
    <EditText
            android:hint="@string/hint_Shots"
            android:inputType="number"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/input_Shots"
            android:layout_marginEnd="187dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_Name_Jrnl" android:layout_marginTop="35dp"/>
    <EditText
            android:hint="@string/hint_Hits"
            android:inputType="number"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/input_Hits"
            android:layout_marginEnd="140dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_Shots"/>
    <EditText
            android:hint="@string/hint_Caliber"
            android:inputType="text"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/input_Caliber"
            android:layout_marginEnd="118dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_Hits"/>
    <EditText
            android:hint="@string/hint_Target"
            android:inputType="text"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/input_Target"
            android:layout_marginEnd="158dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_Caliber"/>
    <EditText
            android:hint="@string/hint_Means"
            android:inputType="text"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/input_Means"
            android:layout_marginEnd="102dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_Target"/>


</androidx.constraintlayout.widget.ConstraintLayout>