<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Revierverwaltung">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/logOutBtnText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleSchussjournal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Revier_TextView"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Jaeger"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleSchussjournal" />

        <Button
            android:id="@+id/menuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/menuBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

        <Button
            android:id="@+id/mapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/mapBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logoutBtn" />

        <Button
            android:id="@+id/schussBtn"
            android:layout_width="82dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/schussBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/mapBtn" />

        <Button
            android:id="@+id/revierBtn"
            android:layout_width="82dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/revierBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/schussBtn" />

        <Button
            android:id="@+id/mapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/mapBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logoutBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickRevierkarte"
            android:text="@string/GoTo_RevierMap_Button"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="29dp" />

        <EditText
            android:id="@+id/user_Pass"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:inputType="textVisiblePassword"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/user_Name" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="93dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:labelFor="@id/user_Name"
            android:text="@string/Jaeger_Nachname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickAddJaeger"
            android:text="@string/Add_Jaeger_Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/user_First_Name"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickDeleteJaeger"
            android:text="@string/Delete_Jaeger_Button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.609"
            tools:layout_editor_absoluteX="30dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="99dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:labelFor="@id/user_Pass"
            android:text="@string/Jaeger_Schein"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="93dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:labelFor="@id/user_First_Name"
            android:text="@string/Jaeger_Vorname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_Name"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/user_First_Name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>